# My-Old-Projects

BingoReboot/: CMakeLists.txt
BingoReboot/src/: main.cpp
BingoReboot/src/core/: common.h  logger.h  unique_id.h
BingoReboot/src/resources/: manager.h  path.h  resource.h  texture.h
